2008-02-16  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/debug-manager/command.c:
	Destroy local variables on each step

	* plugins/debug-manager/debug_tree.c,
	plugins/debug-manager/watch.c,
	plugins/debug-manager/locals.c,
	plugins/gdb/debugger.c,
	libanjuta/interfaces/libanjuta.idl:
	Parse local variables scope (not used yet)

2008-02-15  James Liggett <jrliggett@cox.net>

	reviewed by: Johannes Schmid <jhs@gnome.org>

	* plugins/profiler/gprof-options.c: (setup_widgets),
	(gprof_options_set_target), (gprof_options_has_target),
	(gprof_options_get_string):
	* plugins/profiler/gprof-options.h:
	* plugins/profiler/plugin.c: (ifile_open):
	516128 – crash in Anjuta IDE: selected profiler as the...

2008-02-14  Johannes Schmid <jhs@gnome.org>

	* plugins/macro/macro-db.c: (save_macro), (macro_db_get_macro):
	* plugins/macro/macro-dialog.c: (on_macro_selection_changed):
	* plugins/symbol-browser/an_symbol.c:
	* plugins/symbol-browser/an_symbol_view.c:
	(on_symbol_view_row_expanded):
	Fixed some memory leaks (Remember to all free/unref everything that comes
	from gtk_tree_model_get())

2008-02-14  Johannes Schmid <jhs@gnome.org>

	* plugins/document-manager/search-box.c: (on_search_activated):
	516377 – Status bar does not change its status of 'Search for .. continued at top'
	(caused by differences between scintilla and sourceview)

2008-02-13  James Liggett <jrliggett@cox.net>

	* plugins/subversion/svn-diff-command.c: (svn_diff_command_run):
	Output in UTF-8 format to avoid hangs with the editor. (#516014)

2008-02-14  Johannes Schmid <jhs@gnome.org>

	* plugins/language-support-cpp-java/plugin.c:
	(get_line_indentation_base), (get_line_auto_indentation),
	(on_editor_char_inserted_cpp):
	504905 – Ctrl-I (Auto Indent) doesn't indent properly after C++ public: and private:

2008-02-13  Johannes Schmid <jhs@gnome.org>

	* plugins/language-support-cpp-java/plugin.c:
	(is_iter_inside_string), (get_line_auto_indentation):